[package]
name = "Pico_H_Setup"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.2", features = ["rt", "critical-section-impl"] }
rtt-target = "0.5.0"


[features]
default = ["rt"]
rt = ["rp2040-hal/rt"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true
